
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TableLayout
                    android:id="@+id/playArea"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" >

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal" >

                        <Button
                            android:id="@+id/one"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:text="@string/one"
                            android:textSize="70dp" />

                        <Button
                            android:id="@+id/two"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:text="@string/two"
                            android:textSize="70dp" />

                        <Button
                            android:id="@+id/three"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:text="@string/three"
                            android:textSize="70dp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal" >

                        <Button
                            android:id="@+id/four"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:text="@string/four"
                            android:textSize="70dp" />

                        <Button
                            android:id="@+id/five"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:text="@string/five"
                            android:textSize="70dp" />

                        <Button
                            android:id="@+id/six"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:text="@string/six"
                            android:textSize="70dp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal" >

                        <Button
                            android:id="@+id/seven"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:text="@string/seven"
                            android:textSize="70dp" />

                        <Button
                            android:id="@+id/eight"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:text="@string/eight"
                            android:textSize="70dp" />

                        <Button
                            android:id="@+id/nine"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:text="@string/nine"
                            android:textSize="70dp" />
                    </TableRow>

                    <TextView
                        android:id="@+id/information"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/info"
                        android:textColor="#e10303"
                        android:textSize="30dp" />

                    <TableRow
                        android:id="@+id/tableRow4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:gravity="center_horizontal" >

                        <TextView
                            android:id="@+id/human"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/human"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/humanCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/one"
                            android:textColor="#7ddc1f"
                            android:textSize="20dp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal" >

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tie"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/tiesCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/one"
                            android:textColor="#ead61c"
                            android:textSize="20dp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal" >

                        <TextView
                            android:id="@+id/android"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/android"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/androidCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/one"
                            android:textColor="#e10303"
                            android:textSize="20dp" />
                    </TableRow>
                </TableLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
